--- a/src/components/UIFork.module.css
+++ b/src/components/UIFork.module.css
@@ -382,3 +382,11 @@
   color: #a3a3a3;
   font-size: 12px;
 }
+
+.componentSelectorDropdownTitle {
+  font-size: 12px;
+  color: #a3a3a3;
+  margin-bottom: 4px;
+  padding-left: 4px;
+  font-weight: 500;
+}
